force-app/main/default/objects/Promotion__c/fields/CMS_Log__c.field-meta.xml
<CustomField>
    <fullName>CMS_Log__c</fullName>
    <label>CMS Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>