force-app/main/default/objects/Promotion__c/fields/Decision_code__c.field-meta.xml
<CustomField>
    <fullName>Decision_code__c</fullName>
    <label>Decision code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>