force-app/main/default/objects/Promotion__c/fields/Is_Sync_CMS__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sync CMS</label>
    <type>Checkbox</type>
</CustomField>