force-app/main/default/objects/Promotion__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion Quantity Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>