force-app/main/default/objects/Promotion__c/fields/Promotion_Amount_Target__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Amount_Target__c</fullName>
    <label>Promotion Amount Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>