force-app/main/default/objects/Promotion__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <label>Promotion Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>