force-app/main/default/objects/Promotion__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revzone</fullName>
                <default>true</default>
                <label>Revzone</label>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>