force-app/main/default/objects/Promotion__c/fields/Success_Registered_date__c.field-meta.xml
<CustomField>
    <fullName>Success_Registered_date__c</fullName>
    <label>Success Registered date</label>
    <type>Date</type>
</CustomField>