force-app/main/default/objects/Promotion__c/fields/Use_For__c.field-meta.xml
<CustomField>
    <fullName>Use_For__c</fullName>
    <label>Use For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All DO</fullName>
                <default>true</default>
                <label>All DO</label>
            </value>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
            <value>
                <fullName>Sài Gòn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>